Add location screen and long fact contract
